k8s/analytics.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Secret
  metadata:
    name: analytics-secret
    namespace: analytics-ns
  type: Opaque
  data:
    AWS_ACCESS_KEY_ID: "QVNJQVM1V0FLTTUzNUVVVVlFTkw="
    AWS_SECRET_ACCESS_KEY: "Mm1Ndm1xM1NnaDNjOXdFaEptaUhqQnpNUnJwaSs4TnFRK2toRGtxOQ=="
    AWS_SESSION_TOKEN: "SVFvSmIzSnBaMmx1WDJWakVGa2FDWFZ6TFhkbGMzUXRNaUpITUVVQ0lHQnRNNEx4dmgwQjcyVVkrWGJwaDBEclRMRzV5dGZZUjdJZk80UGNwZm5lQWlFQWlsdXZXY0RPcTV2dWtVWCtUWXlxK2VCYW9DY1dYQ3l0TzVjdE5FOGd4Z29xc0FJSUloQURHZ3d5TURFeE9UTXdOVFl4TVRraURLVEZqMTlOb3RmWUZqeFRrQ3FOQW9NT1I4Ri81ZlBBQkpKZEdUSm9Wa0wxYTFheWhXaEtXVTM4RHlIWCtwK25KMXpKa3R5d244TTdtM2hOdTV4bTJnZGxNRGtzMTJZd1Y4UmptckNDK1pBOUxFMFJnVjhpTm8wVTZRSnV1TTZ5UzF4UUtVY3V6MTQzVDhrRGRiUUt2OGVpSFVianFUTVZZekowVSs3YVc5TjlNK1JHRi95TnR2bEtDS01UV2RSTktPQlBY [...]
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: analytics-config
    namespace: analytics-ns
  data:
    AWS_REGION: "us-east-1"
    AWS_SQS_URL: "https://sqs.us-east-1.amazonaws.com/201193056119/toggle_master_queue"
    AWS_DYNAMODB_TABLE: "ToggleMasterAnalytics"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: analytics-deployment
    namespace: analytics-ns
    labels:
      app: analytics
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: analytics
    template:
      metadata:
        labels:
          app: analytics
      spec:
        containers:
        - name: analytics
          image: 377114445483.dkr.ecr.us-east-1.amazonaws.com/analytics-service:b941363bf20ff4386f5bbccb6f9ffe8a704bea3e
          ports:
          - containerPort: 8005
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 20
- apiVersion: v1
  kind: Service
  metadata:
    name: analytics-svc
    namespace: analytics-ns
  spec:
    type: ClusterIP
    selector:
      app: analytics
    ports:
    - port: 8005
      targetPort: 8005
      protocol: TCP
